
[*] Fri Jan  3 2003 - netcat (cvs)

  o Added command line switch `-c' (close), which shuts down the connection
    on EOF from stdin without waiting for any answer from remote host.
  o Now the SIGUSR1 signal is handled and prints the current sending/receiving
    statistics to stderr, disregarding the verbosity level given.
  o Added some development sheets for those that may want to study GNU Netcat's
    development, in the doc/drafts directory.
  o Fixed a bug in UDP listening mode without pktinfo support and specifying
    the listening interface with `-s'.
  o Now when connecting to an host by an alias of its, it won't write a warning
    anymore but instead it will show the real name of the host.


[*] Tue Oct 15 2002 - netcat v0.6.1

  o Fixed a compilation error in the "doc/" subdirectory when using virtual
    paths.
  o Fixed the socket creation function not setting the right sockopts.  This
    caused netcat to fail opening sockets in some situations.
  o Unified the SIOCGIF* and SIOCGLIF* extension in order to allow udphelper
    compile on Solaris.
  o Fixed a compilation error in udphelper.c on Solaris.
  o Added type "in_port_t" to indicate port numbers in network byte order.
    Also the "nc_port_t" object now contains the port number both in host byte
    order and network byte order notation, which needs less conversions.
  o Added slovak translation, thanks to Lubomir Sedlacik.


[*] Thu Aug 22 2002 - netcat v0.6.0

  o Rewritten the udp listening routines.  Now it uses the newly added
    udphelper routines in order to allow a portable way to simulate two-ends
    connections in UDP mode.
  o Added the NEWS file containing release notes since version 0.2.1.
  o Fixes and additions to the configure script.
  o Now compiles even if random support is not present in the OS.
  o Fixed `-V' option not working. [BUG #588761]
  o Fixed a compilation (a missing header) error on some older BSD4 machines.